tests/snapshots/dependencies__bin__fail__package_lib_target.snap
---
source: tests/dependencies.rs
expression: output
snapshot_kind: text
---
COMMAND:
dependencies
--bin
foobar

STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_lib_target (--lib)


STDOUT:
