tests/snapshots/dependencies__bin__fail__package_multi_target.snap
---
source: tests/dependencies.rs
expression: output
---
STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_multi_target (--lib)
- package_multi_target (--bin package_multi_target)


STDOUT:

