tests/snapshots/dependencies__bin__fail__workspace_single_package_multi_target.snap
---
source: tests/dependencies.rs
expression: output
---
CMD:
dependencies
--bin
foobar

STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_multi_target (--lib)
- package_multi_target (--bin package_multi_target)


STDOUT:
